--- a/LunchList/res/layout-land/detail_form.xml
+++ b/LunchList/res/layout-land/detail_form.xml
@@ -1,3 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!--  Chris Card | 9/21/2012 | landscape layout for detail form -->
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content" >
@@ -5,48 +7,46 @@
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:shrinkColumns="3"
-        android:stretchColumns="3" >
+        android:shrinkColumns="2"
+        android:stretchColumns="2" >
 
         <TableRow>
 
-            <TextView android:text="Name:" />
+            <TextView android:text="@string/nametitle" />
 
             <EditText
                 android:id="@+id/name"
-                android:layout_span="3" />
+                android:layout_span="2" />
         </TableRow>
 
         <TableRow>
 
-            <TextView android:text="Address:" />
+            <TextView android:text="@string/addresstitle" />
 
             <EditText
                 android:id="@+id/addr"
-                android:layout_span="3" />
+                android:layout_span="2" />
         </TableRow>
 
         <TableRow>
 
-            <TextView android:text="Type:" />
+            <TextView android:text="@string/typetitle" />
 
             <RadioGroup android:id="@+id/types" >
 
                 <RadioButton
                     android:id="@+id/take_out"
                     android:checked="true"
-                    android:text="Take-Out" />
+                    android:text="@string/take_outtitle" />
 
                 <RadioButton
                     android:id="@+id/sit_down"
-                    android:text="Sit-Down" />
+                    android:text="@string/sit_downtitle" />
 
                 <RadioButton
                     android:id="@+id/delivery"
-                    android:text="Delivery" />
+                    android:text="@string/deliverytitle" />
             </RadioGroup>
-
-            <TextView android:text="Notes:" />
 
             <LinearLayout android:orientation="vertical" >
 
@@ -55,16 +55,23 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="top"
+                    android:hint="Notes"
                     android:inputType="textMultiLine"
                     android:lines="2"
                     android:maxLines="2"
                     android:scrollHorizontally="false" />
 
+                <EditText
+                    android:id="@+id/feed"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/feedtitle" />
+
                 <Button
                     android:id="@+id/save"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Save" />
+                    android:text="@string/savetitle" />
             </LinearLayout>
         </TableRow>
     </TableLayout>
