--- a/LunchList/res/layout/detail_form.xml
+++ b/LunchList/res/layout/detail_form.xml
@@ -5,10 +5,8 @@
     android:layout_height="wrap_content" >
 
     <TableLayout
-        android:id="@+id/details"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="4dip"
         android:shrinkColumns="1"
         android:stretchColumns="1" >
 
@@ -47,19 +45,18 @@
             </RadioGroup>
         </TableRow>
 
-        <TableRow>
+        <EditText
+            android:id="@+id/notes"
+            android:gravity="top"
+            android:hint="Notes"
+            android:inputType="textMultiLine"
+            android:lines="2"
+            android:maxLines="2"
+            android:scrollHorizontally="false" />
 
-            <TextView android:text="@string/notestitle" />
-
-            <EditText
-                android:id="@+id/notes"
-                android:gravity="top"
-                android:lines="2"
-                android:maxLines="2"
-                android:maxWidth="200sp"
-                android:scrollHorizontally="false"
-                android:singleLine="false" />
-        </TableRow>
+        <EditText
+            android:id="@+id/feed"
+            android:hint="@string/feedtitle" />
 
         <Button
             android:id="@+id/save"
