--- a/LunchList/res/menu/details_option.xml
+++ b/LunchList/res/menu/details_option.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Chris Card | 9/24/2012 | menu for details activity -->
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-<item android:id="@+id/feed"
-android:title="RSS Feed"
-android:icon="@drawable/ic_menu_friendslist"
-/>
-<item android:id="@+id/location"
-	android:title="Save Location"
-	android:icon="@drawable/ic_menu_compass"/>
-<item android:id="@+id/map"
-	android:title="Show on Map"
-	android:icon="@drawable/ic_menu_mapmode"/>
+<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+
+    <item
+        android:id="@+id/feed"
+        android:icon="@drawable/ic_menu_friendslist"
+        android:title="RSS Feed"
+        android:showAsAction="ifRoom|withText"/>
+    <item
+        android:id="@+id/location"
+        android:icon="@drawable/ic_menu_compass"
+        android:title="Save Location"/>
+    <item
+        android:id="@+id/map"
+        android:icon="@drawable/ic_menu_mapmode"
+        android:title="Show on Map"/>
+
 </menu>
